--- a/eclipse_plugin/pom.xml
+++ b/eclipse_plugin/pom.xml
@@ -22,7 +22,7 @@
   <groupId>com.google.googlejavaformat</groupId>
   <artifactId>google-java-format-eclipse-plugin</artifactId>
   <packaging>eclipse-plugin</packaging>
-  <version>1.13.0</version>
+  <version>1.15.0</version>
 
   <name>Google Java Format Plugin for Eclipse 4.5+</name>
 
@@ -47,7 +47,7 @@
     <repository>
       <id>mars</id>
       <layout>p2</layout>
-      <url>https://download.eclipse.org/releases/mars</url>
+      <url>https://download.eclipse.org/releases/2022-09</url>
     </repository>
   </repositories>
 
